# chat-app-proto

./: Cargo.toml
client/: Cargo.toml  index.html
client/src/: main.rs
server/: Cargo.toml
server/src/model/: mod.rs
src/: main.rs
src/controller/: chat.rs  mod.rs
